fix spacing

--- a/assets/css/simple_overrides.css
+++ b/assets/css/simple_overrides.css
@@ -94,7 +94,7 @@ div.button-group {
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    margin: 0px 2px;
+    margin: var(--pico-spacing);
     border-radius: 3px;
   }
 
